# refract-contracts

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
pool/: Cargo.toml
pool/src/: lib.rs  pricing_proptest.rs  test.rs
pool/test_snapshots/pricing_proptest/: calc_shares_is_1to1_when_pool_is_empty.1.json  calc_shares_never_mints_value_out_of_thin_air.1.json
pool/test_snapshots/test/: a_stranger_cannot_register_directly_bypassing_the_pool.1.json  buy_policy_charges_quoted_premium.1.json  buy_policy_registers_in_the_policy_registry.1.json  buy_policy_rejected_above_max_coverage.1.json  buy_policy_rejected_below_min_coverage.1.json  buy_policy_rejected_when_over_utilization.1.json  double_claim_is_rejected.1.json  double_initialize_is_rejected.1.json  expire_policy_frees_coverage_and_deactivates_registry_record.1.json  expire_policy_rejects_an_already_claimed_policy.1.json  expire_policy_rejects_before_end_time.1.json  initialize_sets_defaults.1.json  process_claim_deactivates_the_registry_record.1.json  process_claim_pays_out_when_oracle_triggered.1.json  process_claim_rejected_when_not_triggered.1.json  process_claim_rejects_after_end_time.1.json  process_claim_rejects_unknown_policy.1.json  provide_capital_mints_shares_one_to_one_initially.1.json  provide_capital_rejects_before_initialize.1.json  set_policy_registry_emits_an_event.1.json  set_policy_registry_rejects_non_admin.1.json  set_policy_registry_repoints_the_wired_registry.1.json  update_oracle_emits_an_event.1.json  withdraw_capital_rejects_more_shares_than_owned.1.json  (+3 more)
(+29 files in other folders)
